--- a/Project.toml
+++ b/Project.toml
@@ -13,7 +13,7 @@ VectorizationBase = "3d5dd08c-fd9d-11e8-17fa-ed2836048c2f"
 [compat]
 IfElse = "0.1"
 LoopVectorization = "0.11, 0.12"
-StatsBase = "0.33"
+StatsBase = "0.28 - 0.33"
 VectorizationBase = "0.18, 0.19"
 julia = "1.5"
 
