--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "NaNStatistics"
 uuid = "b946abbf-3ea7-4610-9019-9858bfdeaf2d"
 authors = ["C. Brenhin Keller"]
-version = "0.5.2"
+version = "0.5.3"
 
 [deps]
 IfElse = "615f187c-cbe4-4ef1-ba3b-2fcf58d6d173"
@@ -13,10 +13,10 @@ VectorizationBase = "3d5dd08c-fd9d-11e8-17fa-ed2836048c2f"
 
 [compat]
 IfElse = "0.1"
-LoopVectorization = "0.11, 0.12"
+LoopVectorization = "0.12.42"
 Static = "0.2"
 StatsBase = "0.28 - 0.33"
-VectorizationBase = "0.18, 0.19, 0.20"
+VectorizationBase = "0.20"
 julia = "1"
 
 [extras]
