--- a/Project.toml
+++ b/Project.toml
@@ -16,7 +16,7 @@ IfElse = "0.1"
 LoopVectorization = "0.12.42"
 Static = "0.2, 0.3"
 StatsBase = "0.28 - 0.33"
-VectorizationBase = "0.20"
+VectorizationBase = "0.20, 0.21"
 julia = "1"
 
 [extras]
