--- a/Project.toml
+++ b/Project.toml
@@ -11,7 +11,7 @@ Static = "aedffcd0-7271-4cad-89d0-dc628f76c6d3"
 [compat]
 IfElse = "0.1"
 LoopVectorization = "0.12.113"
-Static = "0.2, 0.3, 0.4, 0.5, 0.6, 0.7"
+Static = "0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8"
 julia = "1.6"
 
 [extras]
