--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "NaNStatistics"
 uuid = "b946abbf-3ea7-4610-9019-9858bfdeaf2d"
 authors = ["C. Brenhin Keller"]
-version = "0.6.16"
+version = "0.6.17"
 
 [deps]
 IfElse = "615f187c-cbe4-4ef1-ba3b-2fcf58d6d173"
@@ -11,7 +11,7 @@ Static = "aedffcd0-7271-4cad-89d0-dc628f76c6d3"
 [compat]
 IfElse = "0.1"
 LoopVectorization = "0.12.113"
-Static = "0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8"
+Static = "0.2 - 0.8"
 julia = "1.6"
 
 [extras]
