--- a/Project.toml
+++ b/Project.toml
@@ -1,18 +1,20 @@
 name = "NaNStatistics"
 uuid = "b946abbf-3ea7-4610-9019-9858bfdeaf2d"
 authors = ["C. Brenhin Keller"]
-version = "0.6.18"
+version = "0.6.19"
 
 [deps]
 IfElse = "615f187c-cbe4-4ef1-ba3b-2fcf58d6d173"
 LoopVectorization = "bdcacae8-1622-11e9-2a5c-532679323890"
+SnoopPrecompile = "66db9d55-30c0-4569-8b51-7e840670fc0c"
 Static = "aedffcd0-7271-4cad-89d0-dc628f76c6d3"
 
 [compat]
 IfElse = "0.1"
 LoopVectorization = "0.12.113"
+SnoopPrecompile = "1"
 Static = "0.2 - 0.8"
-julia = "1.6"
+julia = "1.8"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
