--- a/Project.toml
+++ b/Project.toml
@@ -6,13 +6,13 @@ version = "0.6.25"
 [deps]
 IfElse = "615f187c-cbe4-4ef1-ba3b-2fcf58d6d173"
 LoopVectorization = "bdcacae8-1622-11e9-2a5c-532679323890"
-SnoopPrecompile = "66db9d55-30c0-4569-8b51-7e840670fc0c"
+PrecompileTools = "aea7be01-6a6a-4083-8856-8a6e6704d82a"
 Static = "aedffcd0-7271-4cad-89d0-dc628f76c6d3"
 
 [compat]
 IfElse = "0.1"
 LoopVectorization = "0.12.113"
-SnoopPrecompile = "1"
+PrecompileTools = "1"
 Static = "0.2 - 0.8"
 julia = "1.8"
 
