--- a/Project.toml
+++ b/Project.toml
@@ -13,7 +13,7 @@ Static = "aedffcd0-7271-4cad-89d0-dc628f76c6d3"
 IfElse = "0.1"
 LoopVectorization = "0.12.159"
 PrecompileTools = "1"
-Static = "0.2 - 0.8"
+Static = "0.8.7"
 julia = "1.8, 1.9"
 
 [extras]
