--- a/Project.toml
+++ b/Project.toml
@@ -14,7 +14,7 @@ IfElse = "0.1"
 LoopVectorization = "0.12.159"
 PrecompileTools = "1"
 Static = "0.8"
-julia = "1.8, 1.9"
+julia = "1.8"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
