--- a/Project.toml
+++ b/Project.toml
@@ -13,7 +13,7 @@ VectorizationBase = "3d5dd08c-fd9d-11e8-17fa-ed2836048c2f"
 [compat]
 IfElse = "0.1"
 LoopVectorization = "0.12.113"
-VectorizationBase = "0.21.0 - 0.21.64"
 PrecompileTools = "1"
 Static = "0.8"
+VectorizationBase = "0.21.0 - 0.21.64, 0.21"
 julia = "1.8"
