--- a/Project.toml
+++ b/Project.toml
@@ -15,5 +15,5 @@ IfElse = "0.1"
 LoopVectorization = "0.12.113"
 PrecompileTools = "1"
 Static = "0.8"
-VectorizationBase = "0.21.0 - 0.21.64, 0.21"
+VectorizationBase = "0.21"
 julia = "1.8"
