--- a/Project.toml
+++ b/Project.toml
@@ -4,16 +4,13 @@ authors = ["C. Brenhin Keller"]
 version = "0.6.35"
 
 [deps]
-IfElse = "615f187c-cbe4-4ef1-ba3b-2fcf58d6d173"
-LoopVectorization = "bdcacae8-1622-11e9-2a5c-532679323890"
+ArrayInterface = "4fba245c-0d91-5ea0-9b3e-6abc04ee57a9"
 PrecompileTools = "aea7be01-6a6a-4083-8856-8a6e6704d82a"
 Static = "aedffcd0-7271-4cad-89d0-dc628f76c6d3"
-VectorizationBase = "3d5dd08c-fd9d-11e8-17fa-ed2836048c2f"
+StaticArrayInterface = "0d7ed370-da01-4f52-bd93-41d350b8b718"
 
 [compat]
-IfElse = "0.1"
-LoopVectorization = "0.12.113"
-VectorizationBase = "0.21.0 - 0.21.64"
 PrecompileTools = "1"
 Static = "0.8"
-julia = "1.8"
+StaticArrayInterface = "1"
+julia = "1.10"
