--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "NaNStatistics"
 uuid = "b946abbf-3ea7-4610-9019-9858bfdeaf2d"
 authors = ["C. Brenhin Keller"]
-version = "0.6.49"
+version = "0.6.50"
 
 [deps]
 PrecompileTools = "aea7be01-6a6a-4083-8856-8a6e6704d82a"
@@ -10,13 +10,16 @@ StaticArrayInterface = "0d7ed370-da01-4f52-bd93-41d350b8b718"
 
 [weakdeps]
 DimensionalData = "0703355e-b756-11e9-17c0-8b28908087d0"
+Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
 [extensions]
 NaNStatisticsDimensionalDataExt = "DimensionalData"
+NaNStatisticsUnitfulExt = "Unitful"
 
 [compat]
 DimensionalData = "0.29"
 PrecompileTools = "1"
 Static = "0.8, 1"
 StaticArrayInterface = "1"
+Unitful = "1"
 julia = "1.10"
